Adding content to media page
Still need to work on formatting

--- a/buy.html
+++ b/buy.html
@@ -1147,8 +1147,8 @@ return queryItem
             //document.getElementById("releaseDate").innerHTML = woot.get("listedDate");
             document.getElementById("itemCondition").innerHTML = woot.get("condition");
             document.getElementById("shoe-details").innerHTML = woot.get("itemDesc");
-            document.getElementById("paypalName").value = "Shoe ID: "+queryItem;
-            document.getElementById("paypalPrice").value = woot.get("price");
+            //document.getElementById("paypalName").value = "Shoe ID: "+queryItem;
+            //document.getElementById("paypalPrice").value = woot.get("price");
 
             var finalObj="";
             var finalArrows="";
