--- a/index.html
+++ b/index.html
@@ -412,6 +412,7 @@
               <li><a target=_blank href="http://heatswap.com/news">news</a>
               <li><a href="team.html">our team</a></li>
               <li><a href="story.html">a good story</a></li>
+              <li><a href="media.html">media</a></li>
             </ul>
             
             <form class="navbar-form navbar-right" role="search">
@@ -1087,7 +1088,7 @@ Parse.initialize("Ycnw3xJDv5iT8avNOo54rTM0kuTJpNMMwsMs4iIP", "qYnG7XTl8iSLu9M5iP
             useHttp: true,
             get: 'tagged',
             tagName: 'heatswap',
-            limit: 4,
+            limit: 12,
             after: function () {
               var images = $("#instafeed").find('a');
               $.each(images, function(index, image) {
@@ -1100,7 +1101,7 @@ Parse.initialize("Ycnw3xJDv5iT8avNOo54rTM0kuTJpNMMwsMs4iIP", "qYnG7XTl8iSLu9M5iP
                 $(image).addClass('animated flipInX');
               });
             },
-            template: '<a href="{{link}}" target="_blank" style="width: 20%;"><img style="width: 100%" src="{{image}}" /></a>'
+            template: '<a href="{{link}}" target="_blank" style="width: 15%; margin-left: .5%; margin-right: .5%;"><img style="width: 100%" src="{{image}}" /><div class="likes" style="width: 95%; height: 95%">&hearts; {{likes}}</div></a>'
           });
           feed.run();
         </script>
