--- a/currentlylisted.html
+++ b/currentlylisted.html
@@ -418,6 +418,7 @@
               <li><a target=_blank href="http://heatswap.com/news">news</a>
               <li><a href="team.html">our team</a></li>
               <li><a href="story.html">a good story</a></li>
+              <li><a href="media.html">media</a></li>
             </ul>
             
             <form class="navbar-form navbar-right" role="search">
