--- a/story.html
+++ b/story.html
@@ -409,6 +409,7 @@
               <li><a target=_blank href="http://heatswap.com/news">news</a>
 			 <li><a href="team.html">our team</a></li>
               <li class="active"><a href="#">a good story</a></li>
+              <li><a href="media.html">media</a></li>
             </ul>
             
             <form class="navbar-form navbar-right" role="search">
