Resizing on crop

--- a/sellItem.html
+++ b/sellItem.html
@@ -674,7 +674,8 @@
                       jQuery(function($) {
                         //alert("cropping")
                         $('#workingImage').Jcrop({
-                          aspectRatio: 273 / 182
+                          aspectRatio: 273 / 182,
+                          boxWidth: 858
                         });
                       });
                     }
