--- a/index.html
+++ b/index.html
@@ -1104,7 +1104,7 @@ Parse.initialize("Ycnw3xJDv5iT8avNOo54rTM0kuTJpNMMwsMs4iIP", "qYnG7XTl8iSLu9M5iP
                 $(image).addClass('animated flipInX');
               });
             },
-            template: '<a href="{{link}}" target="_blank" style="width: 15%; margin-left: .5%; margin-right: .5%;"><img style="width: 100%" src="{{image}}" /><div class="likes" style="width: 95%; height: 95%">&hearts; {{likes}}</div></a>'
+            template: '<a href="{{link}}" target="_blank" style="width: 15%; margin-left: .5%; margin-right: .5%;"><img style="width: 100%" src="{{image}}" /><div class="likes" style="width: 95%; height: 95%">{{username}}</div></a>'
           });
           feed.run();
         </script>
