--- a/query.html
+++ b/query.html
@@ -490,31 +490,62 @@
         query.find({
           success: function(results) {
             document.getElementById("questionName").innerHTML=results[0].get("subject")
+
+            var numberOfViews = results[0].get("numViews"); //Retrieve the views
+            numberOfViews += 1; //Add one view
+            results[0].set("numViews", numberOfViews) //Change the int value
+            results[0].save(null, //Save the object
+            {
+              success: function(results)
+              {
+              // Execute any logic that should take place after the object is saved.
+              },
+              error: function(results, error)
+              {
+              // Execute any logic that should take place if the save fails.
+              // error is a Parse.Error with an error code and message.
+              alert('Failed to create new object, with error code: ' + error.message);
+              }
+            });
+            // alert("Added a view. Total views now at: " + numberOfViews) //Debugging
+
             // Do something with the returned Parse.Object values
             var finalObj = "";
             var temporaryStr = "";
             for (var i = 0; i < results.length; i++) { 
+              var dateCreated = new Date()
+              dateCreated = results[i].createdAt
               finalObj += "<div class='thread'>";
               finalObj += "<h4>" + results[i].get("details") + "</h4>";
               finalObj += "</div>";
+              finalObj += "<div class='thread'><h5>Submitted at: " + dateCreated + "</h5></div>" //Add the date created
+              finalObj += "<div class='thread'>"
+              finalObj += "<h4>Number of Views: " + numberOfViews + "</h4>"
+              finalObj += "</div>";
 
-              finalObj += "<div class='thread'><h4>Comments</h4></div>"
 
-              //Add the comments (incomplete)
               // alert("Finding all the comments"); //For debugging
               var comment = Parse.Object.extend("comments");
               var commentQuery = new Parse.Query(comment);
               // alert(holdUsing)
               commentQuery.equalTo("threadID", holdUsing); //Find all that correspond with this thread
+              commentQuery.descending("createdAt");
+
               commentQuery.find({
                 success: function(allComments) {
                   // alert(allComments.length)
+                  finalObj += "<div class='thread'><h4>Comments (" + allComments.length + ")</h4></div>"
                   temporaryStr += "<div class='thread'>"; //Add opening div
                   for (var j = 0; j < allComments.length; j++)
                   {
-                    var addCommentStr = "<p>" + allComments[j].get("comment") + "</p>";
+                    //Trying to find the date of the comment
+                    var dateCreated = new Date()
+                    dateCreated = allComments[j].createdAt.toLocaleDateString() //Get the shortened time
+                    timeCreated = allComments[j].createdAt.getHours() + ":" + allComments[j].createdAt.getMinutes() + ":" + allComments[j].createdAt.getSeconds() //Get the time created
+
+                    var addCommentStr = "<p>" + dateCreated + " " + timeCreated + " " + allComments[j].get("comment") + "</p>"; //The HTML we want to add
                     // alert(addCommentStr); //For debugging
-                    temporaryStr += addCommentStr;
+                    temporaryStr += addCommentStr; //Add to the larger string
                   }
                   temporaryStr += "</div>" //Close div
                   finalObj += temporaryStr; //Add to finalObj
