--- a/query.html
+++ b/query.html
@@ -439,7 +439,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html">faq</a>
+            <!-- <a class="navbar-brand" href="index.html">faq</a>  --> <!-- The weird faq button -->
           </div><!-- /header -->
           
           <div class="navbar-collapse collapse">
@@ -449,6 +449,7 @@
               <li><a href="contactDashboard.html?filter=selling">selling</a></li>
               <li><a href="contactDashboard.html?filter=login">login</a>
               <li><a href="contactDashboard.html?filter=user">user</a></li>
+              <li><a href="contactDashboard.html?filter=other">other</a></li> <!-- Added other category -->
             </ul>
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
