--- a/buy.html
+++ b/buy.html
@@ -972,7 +972,7 @@
                     commentFinalObj += '<ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">'
                     commentFinalObj += '<li role="presentation"><a role="menuitem" tabindex="-1" href="#"><span class="glyphicon glyphicon-flag"></span> report</a></li>'
                     commentFinalObj += '<li role="presentation"><a role="menuitem" tabindex="-1" href="#"><span class="glyphicon glyphicon-pencil"></span> edit</a></li>'
-                    commentFinalObj += '<li role="presentation"><a role="menuitem" tabindex="-1" href="#"><span class="glyphicon glyphicon-trash"></span> delete</a></li>'
+                    commentFinalObj += '<li id="button'+i+'" role="presentation"><a role="menuitem" tabindex="-1" onClick="trashMessage("'+results[i].id+'")"><span class="glyphicon glyphicon-trash"></span> delete</a></li>'
                     commentFinalObj += '</ul>'
                     commentFinalObj += '</div>'
                     commentFinalObj += "<p><font color='#808080'>at "+results[i].get("time")+" on "+results[i].get("date")+", <strong>"+results[i].get("user")+"</strong> said:</font> </p>"
@@ -982,14 +982,36 @@
                       commentFinalObj
                     }
                     commentFinalObj += "</div>"
+                    document.getElementById("commentArea").innerHTML+=commentFinalObj;
+                    commentFinalObj="";
+                    $('#button'+i).attr('id', "delete"+results[i].id);
                     //alert(object.id + ' - ' + object.get('playerName'));
                   }
-                  document.getElementById("commentArea").innerHTML=commentFinalObj;
+                  
                 },
                 error: function(error) {
                   alert("Error: " + error.code + " " + error.message);
                 }
               });
+            </script>
+            <script>
+              var trashMessage=function(x){
+                alert(x)
+                var r = confirm("Are you sure you want to delete this comment?");
+                  if (r == true) {
+                      myObject.destroy({
+                      success: function(myObject) {
+                        // The object was deleted from the Parse Cloud.
+                      },
+                      error: function(myObject, error) {
+                        // The delete failed.
+                        // error is a Parse.Error with an error code and message.
+                      }
+                    });
+                  } else {
+                      x = "You pressed Cancel!";
+                  }
+              }
             </script>
           </div><!-- col-md-7 -->
 
