--- a/sellItem.html
+++ b/sellItem.html
@@ -680,6 +680,21 @@
                       });
                     }
                     </script>
+
+                    <?php
+                      $targ_w = $targ_h = 150;
+                      $jpeg_quality = 90;
+
+                      $src = 'demo_files/flowers.jpg';
+                      $img_r = imagecreatefromjpeg($src);
+                      $dst_r = ImageCreateTrueColor( $targ_w, $targ_h );
+
+                      imagecopyresampled($dst_r,$img_r,0,0,$_POST['x'],$_POST['y'],
+                          $targ_w,$targ_h,$_POST['w'],$_POST['h']);
+
+                      header('Content-type: image/jpeg');
+                      imagejpeg($dst_r, null, $jpeg_quality);
+                      ?>
                     <div class="modal-footer">
                       <button type="button" class="btn btn-default" data-dismiss="modal">cancel</button>
                       <button type="button" class="btn btn-primary">undo</button>
