--- a/query.html
+++ b/query.html
@@ -442,21 +442,22 @@
             <!-- <a class="navbar-brand" href="index.html">faq</a>  --> <!-- The weird faq button -->
           </div><!-- /header -->
           
-          <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-              <li><a href="contactDashboard.html?filter=faq">faq</a></li>
-              <li><a href="contactDashboard.html?filter=buying">buying</a></li>
-              <li><a href="contactDashboard.html?filter=selling">selling</a></li>
-              <li><a href="contactDashboard.html?filter=login">login</a>
-              <li><a href="contactDashboard.html?filter=user">user</a></li>
-              <li><a href="contactDashboard.html?filter=other">other</a></li> <!-- Added other category -->
+          <div class="nav nav-pills nav-stacked leftpillstacked">
+            <ul class="nav nav-pills nav-stacked leftpillstacked">
+              <li role="presentation"><a href="contactDashboard.html?filter=submit">submit</a></li>
+              <li role="presentation"><a href="contactDashboard.html?filter=faq">faq</a></li>
+              <li role="presentation"><a href="contactDashboard.html?filter=buying">buying</a></li>
+              <li role="presentation"><a href="contactDashboard.html?filter=selling">selling</a></li>
+              <li role="presentation"><a href="contactDashboard.html?filter=login">login</a>
+              <li role="presentation"><a href="contactDashboard.html?filter=user">user</a></li>
+              <li role="presentation"><a href="contactDashboard.html?filter=other">other</a></li> <!-- Added other category -->
             </ul>
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
       </div>
 
 
-        <div>
+        <div class="rightpillcontent">
           <h1 id="questionName" >filter</h1>
 
           <div id="threads">
