Still messed up?

--- a/query.html
+++ b/query.html
@@ -441,16 +441,7 @@
             </button>
             <a class="navbar-brand" href="index.html">faq</a>
           </div><!-- /header -->
-          
-<<<<<<< HEAD
-          <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-              <li><a href="contactDashboard.html?filter=faq">faq</a></li>
-              <li><a href="contactDashboard.html?filter=buying">buying</a></li>
-              <li><a href="contactDashboard.html?filter=selling">selling</a></li>
-              <li><a href="contactDashboard.html?filter=login">login</a>
-              <li><a href="contactDashboard.html?filter=user">user</a></li>
-=======
+ 
           <div class="nav nav-pills nav-stacked leftpillstacked">
             <ul class="nav nav-pills nav-stacked leftpillstacked">
               <li role="presentation"><a href="contactDashboard.html?filter=submit">submit</a></li>
@@ -460,14 +451,14 @@
               <li role="presentation"><a href="contactDashboard.html?filter=login">login</a>
               <li role="presentation"><a href="contactDashboard.html?filter=user">user</a></li>
               <li role="presentation"><a href="contactDashboard.html?filter=other">other</a></li> <!-- Added other category -->
->>>>>>> parent of d65ca92... Revert "Broken menu"
+
             </ul>
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
       </div>
 
 
-        <div class="rightpillcontent">
+        <div>
           <h1 id="questionName" >filter</h1>
 
           <div id="threads">
