--- a/contactDashboard.html
+++ b/contactDashboard.html
@@ -442,14 +442,15 @@
             <a class="navbar-brand" href="index.html">faq</a>
           </div><!-- /header -->
           
-          <div class="nav nav-pills nav-stacked leftpillstacked" style="">
-              <li role="presentation"><a href="contactDashboard.html?filter=submit">submit</a></li>
-              <li role="presentation"><a href="contactDashboard.html?filter=faq">faq</a></li>
-              <li role="presentation"><a href="contactDashboard.html?filter=buying">buying</a></li>
-              <li role="presentation"><a href="contactDashboard.html?filter=selling">selling</a></li>
-              <li role="presentation"><a href="contactDashboard.html?filter=login">login</a>
-              <li role="presentation"><a href="contactDashboard.html?filter=user">user</a></li>
-              <li role="presentation"><a href="contactDashboard.html?filter=other">other</a></li> <!-- Added other category -->
+          <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+              <li><a href="contactDashboard.html?filter=submit">submit</a></li>
+              <li><a href="contactDashboard.html?filter=faq">faq</a></li>
+              <li><a href="contactDashboard.html?filter=buying">buying</a></li>
+              <li><a href="contactDashboard.html?filter=selling">selling</a></li>
+              <li><a href="contactDashboard.html?filter=login">login</a>
+              <li><a href="contactDashboard.html?filter=user">user</a></li>
+              <li><a href="contactDashboard.html?filter=other">other</a></li> <!-- Added other category -->
             </ul>
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
