--- a/search.html
+++ b/search.html
@@ -463,6 +463,10 @@
           <div id="results">
 
           </div>
+
+          <div id="pageSelection">
+
+          </div>
         </div>
 
 
@@ -506,58 +510,105 @@
         var maxResults = 10; //Max results per page
         var firstResult = ((pageNumber - 1) * maxResults);
         var lastResult = (pageNumber * maxResults);
+        var totalResults = -1;
+        var queryLimit = lastResult + 1;
         // alert("Showing results: " + firstResult + "-" + lastResult);
         if (filterCategory == "shoes")
         {
           // alert("Searching through shoes")
           var shoes = Parse.Object.extend("shoe");
           var query = new Parse.Query(shoes);
-          var finalObj = "";
-          query.limit(lastResult + 1); //Offset by 1
-          query.find({
-            success: function(results) {
-              for (var i = firstResult; i < lastResult; i++) {
-                var currentShoe = results[i].get("item").toUpperCase(); //Make all uppercase to make case insensitive
-                var strPosition = currentShoe.search(holdUsing.toUpperCase()); //Find the location in the string of the phrase
-                if (strPosition != -1){ //if it exists
-                  //This is what happens to each individual search result
-                  var picture = "<div>" + "<img src=" + results[i].get("image") + " class='shoeSearchPicture'></div>";
-                  finalObj += picture;
-                  var link = "<a href=buy.html?item=" + results[i].get("objectid") + ">";
-                  finalObj += "<h5>" + link + results[i].get("item") + "</h5>"
-                }
+          query.count({
+            success: function(number) {
+              totalResults = number;
+              pagination();
+              if (lastResult > totalResults){
+                queryLimit = totalResults + 1;
+                // alert("limited by total results")
               }
-              document.getElementById("results").innerHTML=finalObj;
+              query.limit(queryLimit);
+              var finalObj = "";
+              query.find({
+                success: function(results) {
+                  for (var i = firstResult; i < queryLimit - 1; i++) {
+                    var currentShoe = results[i].get("item").toUpperCase(); //Make all uppercase to make case insensitive
+                    var strPosition = currentShoe.search(holdUsing.toUpperCase()); //Find the location in the string of the phrase
+                    if (strPosition != -1){ //if it exists
+                      //This is what happens to each individual search result
+                      var picture = "<div>" + "<img src=" + results[i].get("image") + " class='shoeSearchPicture'></div>";
+                      finalObj += picture;
+                      var link = "<a href=buy.html?item=" + results[i].get("objectid") + ">";
+                      finalObj += "<h5>" + link + results[i].get("item") + "</h5>"
+                    }
+                  }
+                  document.getElementById("results").innerHTML=finalObj;
+                },
+                error: function(error) {
+                  alert("Error: " + error.code + " " + error.message);
+                }
+              });
             },
             error: function(error) {
               alert("Error: " + error.code + " " + error.message);
             }
-          });
+          })
         }
         else if (filterCategory == "users")
         {
           // alert("Searching through users")
           var users = Parse.Object.extend("User");
           var query = new Parse.Query(users);
-          var finalObj = "";
-          query.limit(lastResult + 1); //Offset by 1
-          query.find({
-            success: function(results) {
-              for (var i = firstResult; i < lastResult; i++) {
-                var currentUser = results[i].get("username").toUpperCase();
-                if (currentUser.search(holdUsing.toUpperCase()) != -1) //If it exists
-                {
-                  var link = "<a href=store.html?user=" + results[i].get("storeId") + ">";
-                  finalObj += "<h5>" + link + results[i].get("username") + "</h5>"; //Return either username of full name...haven't decided
-                  //Link redirects to the user's store
-                }
+          query.count({
+            success: function(number) {
+              totalResults = number;
+              alert("Found: " + totalResults + " results");
+              pagination();
+              if (lastResult > totalResults){
+                queryLimit = totalResults + 1;
+                // alert("limited by total results")
               }
-              document.getElementById("results").innerHTML = finalObj;
+              query.limit(queryLimit + 1); //Offset by 1
+              var finalObj = ""; //Reset final object
+              query.find({
+                success: function(results) {
+                  for (var i = firstResult; i < lastResult; i++) {
+                    var currentUser = results[i].get("username").toUpperCase();
+                    if (currentUser.search(holdUsing.toUpperCase()) != -1) //If it exists
+                    {
+                      var link = "<a href=store.html?user=" + results[i].get("storeId") + ">";
+                      finalObj += "<h5>" + link + results[i].get("username") + "</h5>"; //Return either username of full name...haven't decided
+                      //Link redirects to the user's store
+                    }
+                  }
+                  document.getElementById("results").innerHTML = finalObj;
+                },
+                error: function(error) {
+                  alert("Error: " + error.code + " " + error.message);
+                }
+              })
             },
             error: function(error) {
               alert("Error: " + error.code + " " + error.message);
             }
           })
+        }
+
+        //Pagination (Page selection)
+        var pagination = function(){
+          if (totalResults >= 0) //If the request went through
+          {
+            var totalPages = Math.ceil(totalResults/maxResults); //Find total pages and round up
+            finalObj = ""; //Reset final object
+            finalObj+= "<nav><ul class='pagination'>"
+            for (var k = 1; k < totalPages + 1; k++)
+            {
+              finalObj += "<li><a href=search.html?search=" + holdUsing + "#filter=" + filterCategory + "#page=" + k + ">";
+              finalObj += k + "</a></li>"
+            }
+            finalObj += "</ul></nav>"
+            // alert("There were: " + totalResults + " results found (" + totalPages + ")"); //Debugging
+            document.getElementById("pageSelection").innerHTML = finalObj
+          }
         }
       </script>
 
